Fix email input too big (actually pdbid input was shrunken because its form had a different font size)

--- a/client/public/css/status.scss
+++ b/client/public/css/status.scss
@@ -8,7 +8,6 @@
 
   .status-info {
     text-align: left;
-    font-size: 0.8rem;
     color: #3C3B46;
   }
 
